gen/adsensehost/v4.1/cargo-errors.log
    Checking google-adsensehost4d1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/adsensehost/v4.1/lib)
error[E0412]: cannot find type `StartProductCodeItems` in module `crate::resources::associationsessions::params`
    --> adsensehost/v4.1/lib/src/lib.rs:3658:72
     |
3658 |                     Vec<crate::resources::associationsessions::params::StartProductCodeItems>,
     |                                                                        ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::associationsessions::params`

error[E0412]: cannot find type `StartProductCodeItems` in module `crate::resources::associationsessions::params`
    --> adsensehost/v4.1/lib/src/lib.rs:3698:78
     |
3698 |             product_code: Vec<crate::resources::associationsessions::params::StartProductCodeItems>,
     |                                                                              ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::associationsessions::params`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
error: Could not compile `google-adsensehost4d1`.

To learn more, run the command again with --verbose.
